updated services, controllers and UI